--- a/kr/index.html
+++ b/kr/index.html
@@ -25,6 +25,27 @@
             <ol>Сметана </ol>
             <ol>Кетчуп </ol>
         </ul>
+     <table>
+      <thead> 
+      <tr>
+       <th>Micto</th>
+       <th>Yfctktyyz</th>
+      </tr>
+      </thead>
+      <tbody>
+       <tr>
+        <td>Дублін</td>
+        <td>Ер-Ріяд </td>
+        <td>Мюнхен</td>
+        <td>Детройт</td>
+       </tr>
+       <tr>
+        <td>1,1 млн. ос./td>
+        <td>7,6 млн. ос.</td>
+        <td>1,4 млн. ос.</td>
+        <td>0,6 млн. ос.</td>
+       </tr>
+      </tbody>
+     </table>
     </body> 
-     
-</html>
+    </html>
