--- a/kr/index.html
+++ b/kr/index.html
@@ -33,18 +33,18 @@
       </tr>
       </thead>
       <tbody>
-       <tr>
-        <td>Дублін</td>
-        <td>Ер-Ріяд </td>
-        <td>Мюнхен</td>
-        <td>Детройт</td>
-       </tr>
-       <tr>
-        <td>1,1 млн. ос./td>
-        <td>7,6 млн. ос.</td>
-        <td>1,4 млн. ос.</td>
-        <td>0,6 млн. ос.</td>
-       </tr>
+       <td>
+        <tr>Дублін</tr>
+        <tr>Ер-Ріяд </tr>
+        <tr>Мюнхен</tr>
+        <tr>Детройт</tr>
+       </td>
+       <td>
+        <tr>1,1 млн. ос./tr>
+        <tr>7,6 млн. ос.</tr>
+        <tr>1,4 млн. ос.</tr>
+        <tr>0,6 млн. ос.</tr>
+       </td>
       </tbody>
      </table>
     </body> 
