--- a/kr/index.html
+++ b/kr/index.html
@@ -40,12 +40,16 @@
         <td>Детройт</td>
        </tr>
        <tr>
-        <td>1,1 млн. ос./td>
+        <td>1,1 млн. ос.</td>
         <td>7,6 млн. ос.</td>
         <td>1,4 млн. ос.</td>
         <td>0,6 млн. ос.</td>
        </tr>
       </tbody>
      </table>
+     <h3>Зображення</h3>
+     <img src="https://place-hold.it/320x240" alt="" width="320" height="240">
+     <h3>Посилання на зображення</h3>
+     <a href=”https://place-hold.it/320x240”>
     </body> 
     </html>
