--- a/kr/index.html
+++ b/kr/index.html
@@ -49,7 +49,6 @@
      </table>
      <h3>Зображення</h3>
      <img src="https://place-hold.it/320x240" alt="" width="320" height="240">
-     <h3>Посилання на зображення</h3>
-     <a href=”https://place-hold.it/320x240”></a>
+     <a href=”https://place-hold.it/320x240”>Посилання на зображення</a>
     </body> 
     </html>
