--- a/kr/index.html
+++ b/kr/index.html
@@ -48,8 +48,8 @@
       </tbody>
      </table>
      <h3>Зображення</h3>
-     <img src="https://place-hold.it/320x240" alt="" width="320" height="240">
+     <img src="https://place-hold.it/320x240" alt=" width="320" height="240">
  
-     <a href=”https://place-hold.it/320x240”>Посилання на зображення</a>
+     <a target="_blank" href=”https://place-hold.it/320x240”>Посилання на зображення</a>
     </body> 
     </html>
