--- a/kr/index.html
+++ b/kr/index.html
@@ -35,15 +35,19 @@
       <tbody>
        <tr>
         <td>Дублін</td>
-        <td>Ер-Ріяд </td>
-        <td>Мюнхен</td>
-        <td>Детройт</td>
-       </tr>
-       <tr>
         <td>1,1 млн. ос.</td>
-        <td>7,6 млн. ос.</td>
-        <td>1,4 млн. ос.</td>
-        <td>0,6 млн. ос.</td>
+       </tr>
+          <tr>
+        <td>Ер-Ріяд</td>
+        <td>7 млн. ос.</td>
+       </tr>
+          <tr>
+        <td>Київ</td>
+        <td>1 млн. ос.</td>
+       </tr>
+          <tr>
+        <td>Дубно</td>
+        <td>1,7 млн. ос.</td>
        </tr>
       </tbody>
      </table>
