--- a/kr/index.html
+++ b/kr/index.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li>Капуста </li>
                     <li>Морква</li>
-                    <li><Буряк></li>
+                    <li>Буряк</li>
                 </ul>
             </ol>
             <ol>Сметана </ol>
