--- a/kr/index.html
+++ b/kr/index.html
@@ -10,9 +10,12 @@
         <h1>Контрольна робота</h1> 
         <h2>прізвище, ім’я та по-батькові виконавця</h2> 
         <h3>Варіант 2</h3> 
+       <div class="block1">
         <h3>Текст</h3> 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non dolor unde architecto itaque aliquam quisquam vel repudiandae, possimus, alias sapiente velit beatae? Eligendi suscipit minima dolores in officiis, odit numquam.</p> 
-        <h3> Список</h3>
+       </div>
+     <div class="block2>
+      <h3> Список</h3>
         <ul> 
             <ol>Чай </ol>
             <ol> Овочі
@@ -25,6 +28,8 @@
             <ol>Сметана </ol>
             <ol>Кетчуп </ol>
         </ul>
+      </div>
+      <div class="block3>
      <table>
       <thead> 
       <tr>
@@ -51,8 +56,11 @@
        </tr>
       </tbody>
      </table>
+     </div>
+     <div class="block4>
      <h3>Зображення</h3>
   <img src="https://place-hold.it/320x240" alt="Немає зображення" width="320" height="240">
     <br><a target="_blank" href="https://place-hold.it/320x240">Посилання на зображення</a></br>
+     </div>
 </body>
 </html>
