--- a/kr/index.html
+++ b/kr/index.html
@@ -14,7 +14,7 @@
         <h3>Текст</h3> 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non dolor unde architecto itaque aliquam quisquam vel repudiandae, possimus, alias sapiente velit beatae? Eligendi suscipit minima dolores in officiis, odit numquam.</p> 
        </div>
-     <div class="block2>
+     <div class="block2">
       <h3> Список</h3>
         <ul> 
             <ol>Чай </ol>
@@ -29,7 +29,7 @@
             <ol>Кетчуп </ol>
         </ul>
       </div>
-      <div class="block3>
+      <div class="block3">
      <table>
       <thead> 
       <tr>
@@ -57,7 +57,7 @@
       </tbody>
      </table>
      </div>
-     <div class="block4>
+     <div class="block4">
      <h3>Зображення</h3>
   <img src="https://place-hold.it/320x240" alt="Немає зображення" width="320" height="240">
     <br><a target="_blank" href="https://place-hold.it/320x240">Посилання на зображення</a></br>
