--- a/kr/index.html
+++ b/kr/index.html
@@ -12,11 +12,11 @@
         <h2>прізвище, ім’я та по-батькові виконавця</h2> 
         <h3>Варіант 2</h3> 
        <div class="block1">
-        <h3>Текст</h3> 
+        <h4>Текст</h4> 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non dolor unde architecto itaque aliquam quisquam vel repudiandae, possimus, alias sapiente velit beatae? Eligendi suscipit minima dolores in officiis, odit numquam.</p> 
        </div>
      <div class="block2">
-      <h3> Список</h3>
+      <h4> Список</h4>
         <ul> 
             <ol>Чай </ol>
             <ol> Овочі
@@ -31,6 +31,7 @@
         </ul>
       </div>
       <div class="block3">
+       <h4>Таблиця</h4>
      <table>
       <thead> 
       <tr>
@@ -59,7 +60,7 @@
      </table>
      </div>
      <div class="block4">
-     <h3>Зображення</h3>
+     <h4>Зображення</h4>
   <img src="https://place-hold.it/320x240" alt="Немає зображення" width="320" height="240">
     <br><a target="_blank" href="https://place-hold.it/320x240">Посилання на зображення</a></br>
      </div>
