--- a/kr/index.html
+++ b/kr/index.html
@@ -16,7 +16,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non dolor unde architecto itaque aliquam quisquam vel repudiandae, possimus, alias sapiente velit beatae? Eligendi suscipit minima dolores in officiis, odit numquam.</p> 
        </div>
      <div class="block2">
-      <h4 class="h4-2>" Список</h4>
+      <h4 class="h4-2">Список</h4>
         <ul> 
             <ol>Чай </ol>
             <ol> Овочі
