--- a/kr/index.html
+++ b/kr/index.html
@@ -5,6 +5,7 @@
     <head> 
         <title>Персональна сторінка</title>  
         <meta charset="utf-8"> 
+     <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="stylesheet" href=" styles.css">
     </head> 
     <body> 
