--- a/kr/index.html
+++ b/kr/index.html
@@ -5,8 +5,8 @@
     <head> 
         <title>Персональна сторінка</title>  
         <meta charset="utf-8"> 
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="stylesheet" href=" styles.css">
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Roboto:ital,wght@1,100;1,900&family=Silkscreen&display=swap" rel="stylesheet">  
+     <link rel="stylesheet" href=" styles.css">
     </head> 
     <body> 
         <h1>Контрольна робота</h1> 
