--- a/kr/index.html
+++ b/kr/index.html
@@ -5,7 +5,7 @@
     <head> 
         <title>Персональна сторінка</title>  
         <meta charset="utf-8"> 
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Roboto:ital,wght@1,100;1,900&family=Silkscreen&display=swap" rel="stylesheet">  
+<link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@300&family=Roboto:wght@100&family=Silkscreen&display=swap" rel="stylesheet">  
      <link rel="stylesheet" href=" styles.css">
     </head> 
     <body> 
