--- a/kr/index.html
+++ b/kr/index.html
@@ -5,7 +5,9 @@
     <head> 
         <title>Персональна сторінка</title>  
         <meta charset="utf-8"> 
-<link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@300&family=Roboto:wght@100&family=Silkscreen&display=swap" rel="stylesheet">  
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@300&family=Roboto:wght@100&family=Silkscreen&display=swap" rel="stylesheet">
      <link rel="stylesheet" href=" styles.css">
     </head> 
     <body> 
