--- a/kntr/index.html
+++ b/kntr/index.html
@@ -20,12 +20,13 @@
             <ol>Хліб</ol>
             <ol>Масло</ol>
             <ol>Мінеральна вода</ol>
-            <ol>Крупи</ol>
+            <ol> Крупи
               <ul>
                <li>Гречка</li>
                <li>Рис</li>
                <li>Манка</li>
               </ul>
+            </ol>
             <ol>Макарони</ol>
            </ul>
      </div>
