--- a/kntr/index.html
+++ b/kntr/index.html
@@ -60,6 +60,6 @@
       <h4>Зображення</h4>
       <img src="https://place-hold.it/320x240" alt="Немає зображення" width="320" heidht="240">
      </div>
-     <a target="https://place-hold.it/400x450">Посилання на зображеня</a>
+     <a target="_blance" href="https://place-hold.it/400x450">Посилання на зображеня</a>
       
       
