--- a/kntr/index.html
+++ b/kntr/index.html
@@ -46,7 +46,7 @@
          <td>10,69 млн ос.</td>
         </tr>
          <tr>
-         <td>ІФранція</td>
+         <td>Франція</td>
          <td>66,8 млн ос.</td>
         </tr>
          <">
