--- a/kntr/index.html
+++ b/kntr/index.html
@@ -16,7 +16,7 @@
      </div>
      <div class="block2">
        <h4>Список</h4>
-           <ul>
+           <ul style="list-style-type:disc;">
             <ol>Хліб</ol>
             <ol>Масло</ol>
             <ol>Мінеральна вода</ol>
