--- a/kntr/index.html
+++ b/kntr/index.html
@@ -17,17 +17,17 @@
      <div class="block2">
        <h4>Список</h4>
            <ul style="list-style-type:disc;">
-            <ol>Хліб</ol>
-            <ol>Масло</ol>
-            <ol>Мінеральна вода</ol>
-            <ol> Крупи
+            <li>Хліб</li>
+            <li>Масло</li>
+            <li>Мінеральна вода</li>
+            <li> Крупи
               <ul>
                <li>Гречка</li>
                <li>Рис</li>
                <li>Манка</li>
               </ul>
-            </ol>
-            <ol>Макарони</ol>
+            </li>
+            <li>Макарони</li>
            </ul>
      </div>
       <div class="block4">
