--- a/kntr/index.html
+++ b/kntr/index.html
@@ -21,7 +21,7 @@
             <li>Масло</li>
             <li>Мінеральна вода</li>
             <li> Крупи
-              <ul>
+              <ul style="list-style-type:disc;">
                <li>Гречка</li>
                <li>Рис</li>
                <li>Манка</li>
