--- a/kntr/index.html
+++ b/kntr/index.html
@@ -32,6 +32,7 @@
            </ol>
      </div>
       <div class="block3">
+       <h4>Таблиця</h4>
        <table>
          <thead>
           <th>Місто</th>
