--- a/kntr/index.html
+++ b/kntr/index.html
@@ -62,5 +62,7 @@
       <img src="https://place-hold.it/320x240" alt="Немає зображення" width="320" heidht="240">
      </div>
      <a target="_blance" href="https://place-hold.it/400x450">Посилання на зображеня</a>
+    </body>
+ </html>
       
       
