--- a/kntr/index.html
+++ b/kntr/index.html
@@ -12,7 +12,7 @@
     </head> 
     <body> 
         <h1>Контрольна робота</h1> 
-           <h2>прізвище, ім’я та по-батькові виконавця</h2> 
+           <h2>Салюк Марина Андріївна</h2> 
               <h3>Варіант 2</h3>
      <div class="block1">
         <h4>Текст</h4> 
