--- a/kntr/index.html
+++ b/kntr/index.html
@@ -14,7 +14,7 @@
         <h1>Контрольна робота</h1> 
            <h2>Салюк Марина Андріївна</h2> 
               <h3>Варіант 2</h3>
-   
+   <div class="container">
      <div class="block1">
         <h4>Текст</h4> 
            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non dolor unde architecto itaque aliquam quisquam vel repudiandae, possimus, alias sapiente velit beatae? Eligendi suscipit minima dolores in officiis, odit numquam.</p> 
@@ -65,7 +65,7 @@
       <h4>Зображення</h4>
       <img src="https://place-hold.it/320x240" alt="Немає зображення" width="320" heidht="240">
      </div>
-   
+   </div>
      <a target="_blance" href="https://place-hold.it/400x450">Посилання на зображеня</a>
     </body>
  </html>
