--- a/kntr/index.html
+++ b/kntr/index.html
@@ -22,10 +22,10 @@
      <div class="block2">
        <h4>Список</h4>
            <ol>
-            <li>Хліб</li>
+            <li>хліб</li>
             <li>Масло</li>
             <li>Мінеральна вода</li>
-            <li> Крупи
+            <li>Крупи
               <ul style="list-style-type:disc;">
                <li>Гречка</li>
                <li>Рис</li>
